aspect-ratio vars & prevent scroll on no overflow images

--- a/styles/components/LazyImage.module.scss
+++ b/styles/components/LazyImage.module.scss
@@ -30,6 +30,7 @@
 }
 
 .lazyImage {
+  display: block;
   object-fit: cover;
   position: relative !important;
   top: 0;
