--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -1,16 +1,5 @@
 @import 'variables';
 
-@mixin homepageImageAspectRatio {
-  aspect-ratio: 16/10;
-  // fallback
-  @supports not (aspect-ratio: 16/10) {
-    padding-bottom: calc(10 / 16 * 100%);
-    height: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-}
-
 .homepage {
   width: 100%;
   min-height: calc(100vh - #{$navBar_height});
@@ -52,7 +41,7 @@
   position: relative;
   width: 90%;
   margin: calc(#{$defaultSpacing} * 2) 0;
-  @include homepageImageAspectRatio;
+  @include screenshotAspectRatio;
 }
 
 .featuredWorkText {
