--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -63,3 +63,24 @@ $layoutSpacing: 5vw;
   grid-template-rows: repeat(10,minmax(calc(var(--container-width) * var(--row-height-scaling-factor)), auto));
   grid-template-columns: minmax(var(--grid-gutter), 1fr) repeat(24, minmax(0, var(--cell-max-width))) minmax(var(--grid-gutter), 1fr);
 }
+
+// Aspect ratios with fallbacks
+@mixin screenshotAspectRatio {
+  aspect-ratio: 25/16;
+  // fallback
+  @supports not (aspect-ratio: 25/16) {
+    padding-bottom: calc(16 / 25 * 100%);
+    height: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
+@mixin fullBleedAspectRatio {
+  aspect-ratio: 20/14;
+  // fallback
+  @supports not (aspect-ratio: 20/14) {
+    padding-bottom: calc(14 / 20 * 100%);
+    height: 0;
+  }
+}
